[gd_scene load_steps=3 format=3 uid="uid://cfcdm1qehxvki"]

[ext_resource type="Script" path="res://tests/TestStylizedProgressBar.gd" id="1_e0gwl"]
[ext_resource type="PackedScene" uid="uid://6aqc8g4pew4f" path="res://src/StylizedProgressBar.tscn" id="1_iayjx"]

[node name="TestStylizedProgressBar" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0gwl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value"

[node name="SetValue" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Max"

[node name="SetMaxValue" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="StylizedProgressBar" parent="VBoxContainer" instance=ExtResource("1_iayjx")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Decrease" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "  -  "

[node name="Increase" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "  +  "

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
